fix whitespace in posts #2

--- a/public/stylesheets/sass/yarn.sass
+++ b/public/stylesheets/sass/yarn.sass
@@ -88,7 +88,7 @@ body
   margin: 0
 
 .post p
-  white-space: pre
+  white-space: pre-wrap
 
 #adminops
   display: inline
